--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
-build/**
+# Build directories
+build/
+*.o
+*.out
+*.exe
+SandPhysics
+
+# Editor files
+.vscode/
+.idea/
+
+# OS generated files
+.DS_Store
